# selenium-wire

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  NOTICES  README.rst  edge_setup.rst  isort.cfg  mitmproxy-ca-cert.p12  pyproject.toml  requirements.txt  requirements_dev.txt  safari_setup.rst  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cibuild.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
seleniumwire/: __init__.py  __main__.py  backend.py  handler.py  har.py  inspect.py  mitmproxy.py  modifier.py  request.py  server.py  storage.py  tls.py  utils.py  webdriver.py
seleniumwire/cert/: ca.key
seleniumwire/proxy/: __init__.py  addonmanager.py  backend.py  ca.crt  ca.key  cert.key  cert.py  certs.py  client.py  command.py  connections.py  controller.py  ctx.py  eventsequence.py  flow.py  flowfilter.py  handler.py  http.py  master.py  mitmproxy.crt  mitmproxy.py  modifier.py  options.py  optmanager.py  proxy2.py  request.py  server.py  socks.py  stateobject.py  storage.py  tcp.py  types.py  util.py  utils.py  websocket.py  win_inet_pton.py
seleniumwire/proxy2/: cert.py  client.py  handler.py  mitmproxy.py  modifier.py  proxy2.py  server.py  utils.py
seleniumwire/undetected_chromedriver/: __init__.py  v2.py  webdriver.py
seleniumwire/webdriver/: __init__.py  browser.py  request.py
tests/: __init__.py  acceptance.py  inject_message.py  server.crt  test_seleniumwire.py  utils.py
(+80 files in other folders)
