[bumpversion]
current_version = 4.3.2
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:seleniumwire/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
python-tag = py3

[flake8]
exclude = docs

[aliases]

[metadata]
description-file = README.rst
